# SlurpJuice

./: .glitch-assets  .replit  CODE_OF_CONDUCT.md  LICENSE.md  README.md  bot.py  env.example  package-lock.json  pyproject.toml  requirements.txt  start.sh
cogs/: benbot.py  fortnite.py  fortniteapicom.py  fortniteapiio.py  fortnitetracker.py  nitestats.py  twitch.py
