[tool.poetry]
name = "rifttogo20"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.14.0"
twitchio = "^1.1.0"
discord = "^1.0.1"
flask = "^1.1.2"
fortnitepy = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
